Tests/PySwiftASTTests/Resources/syntax_errors/unexpected_token.py
# Unexpected token
x = 5
y = @ 10  # Invalid operator
z = x + y
